@@ -103,6 +103,7 @@ production.
   action=login
 * (bug 29237) add interwiki target url attribute to api/query/interwiki
 * (bug 28392) mark action=undelete&timestamps as type "timestamp"
+* (bug 21346) Make deleted images searchable by hash (disabled in Miser Mode)
 
 === Languages updated in 1.19 ===
 
